<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvChapterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:minLines="1"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="The name of chapter" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSubteam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
